--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "developer-portfolio",
-  "description": "Portfolio of Abu Said",
+  "description": "Portfolio of Iñigo Iparragirre",
   "version": "0.1.0",
   "private": true,
   "scripts": {
